--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
     "dayjs": "^1.11.10",
     "formik": "^2.4.5",
     "framer-motion": "^6.3.16",
+    "jsonwebtoken": "^9.0.2",
     "jspdf": "^2.5.2",
     "jspdf-autotable": "^3.8.4",
+    "jwt-decode": "^4.0.0",
     "material-ui-popup-state": "^4.0.1",
     "moment": "^2.30.1",
     "name-parser": "^0.0.1",
